Add Start key & BNO055 reading & complete movement

--- a/main-micro/main-micro.ioc
+++ b/main-micro/main-micro.ioc
@@ -148,7 +148,7 @@ PB15.GPIO_Label=TSSP13
 PB15.Locked=true
 PB15.Signal=S_TIM12_CH2
 PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=MOTOR3_PWM
+PB2.GPIO_Label=MOTOR3_DIRECTION
 PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
