--- a/main-micro/main-micro.ioc
+++ b/main-micro/main-micro.ioc
@@ -3,7 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Mode=I2C_Fast
 I2C2.IPParameters=I2C_Mode
 KeepUserPlacement=false
@@ -11,16 +11,17 @@ Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
 Mcu.IP0=I2C2
 Mcu.IP1=NVIC
-Mcu.IP10=UART4
+Mcu.IP10=TIM12
+Mcu.IP11=UART4
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
 Mcu.IP5=TIM2
 Mcu.IP6=TIM3
-Mcu.IP7=TIM5
-Mcu.IP8=TIM8
-Mcu.IP9=TIM12
-Mcu.IPNb=11
+Mcu.IP7=TIM4
+Mcu.IP8=TIM5
+Mcu.IP9=TIM8
+Mcu.IPNb=12
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -58,15 +59,16 @@ Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin42=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin40=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin42=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM12_VS_ClockSourceINT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PC4
-Mcu.PinsNb=43
+Mcu.PinsNb=44
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -82,6 +84,13 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_BRK_TIM12_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=TSSP5
@@ -198,11 +207,11 @@ PC7.GPIO_Label=TSSP14
 PC7.Locked=true
 PC7.Signal=S_TIM8_CH2
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=TSSP15
+PC8.GPIO_Label=TSSP0
 PC8.Locked=true
 PC8.Signal=S_TIM8_CH3
 PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=TSSP0
+PC9.GPIO_Label=TSSP15
 PC9.Locked=true
 PC9.Signal=S_TIM8_CH4
 PH0-OSC_IN.Mode=HSE-External-Oscillator
@@ -323,26 +332,29 @@ TIM12.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM12.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM12.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,Channel-Input_Capture2_from_TI2
 TIM12.Period=800
-TIM12.Prescaler=168-1
+TIM12.Prescaler=84-1
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM2.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-Input_Capture3_from_TI3,Prescaler,Period,Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Channel-Input_Capture4_from_TI4
 TIM2.Period=800
-TIM2.Prescaler=168-1
+TIM2.Prescaler=84-1
 TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM3.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM3.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM3.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-Input_Capture3_from_TI3,Prescaler,Period,Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Channel-Input_Capture4_from_TI4
 TIM3.Period=800
-TIM3.Prescaler=168-1
+TIM3.Prescaler=84-1
+TIM4.IPParameters=Prescaler,Period
+TIM4.Period=800
+TIM4.Prescaler=84-1
 TIM5.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM5.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM5.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,Channel-Input_Capture2_from_TI2
 TIM5.Period=800
-TIM5.Prescaler=168-1
+TIM5.Prescaler=84-1
 TIM8.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM8.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM8.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
@@ -363,6 +375,8 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
