--- a/main-micro/main-micro.ioc
+++ b/main-micro/main-micro.ioc
@@ -11,8 +11,9 @@ Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
 Mcu.IP0=I2C2
 Mcu.IP1=NVIC
-Mcu.IP10=TIM12
-Mcu.IP11=UART4
+Mcu.IP10=TIM8
+Mcu.IP11=TIM12
+Mcu.IP12=UART4
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
@@ -20,8 +21,8 @@ Mcu.IP5=TIM2
 Mcu.IP6=TIM3
 Mcu.IP7=TIM4
 Mcu.IP8=TIM5
-Mcu.IP9=TIM8
-Mcu.IPNb=12
+Mcu.IP9=TIM7
+Mcu.IPNb=13
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -61,14 +62,15 @@ Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin40=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin41=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin42=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin42=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM12_VS_ClockSourceINT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PC4
-Mcu.PinsNb=44
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -88,6 +90,7 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM8_BRK_TIM12_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM8_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -231,7 +234,7 @@ ProjectManager.DeviceId=STM32F405RGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -243,11 +246,11 @@ ProjectManager.ProjectFileName=main-micro.ioc
 ProjectManager.ProjectName=main-micro
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -355,6 +358,9 @@ TIM5.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM5.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,Channel-Input_Capture2_from_TI2
 TIM5.Period=800
 TIM5.Prescaler=84-1
+TIM7.IPParameters=Prescaler,Period
+TIM7.Period=1
+TIM7.Prescaler=8400-1
 TIM8.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM8.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM8.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
@@ -379,6 +385,8 @@ VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
