Fix gyro&Remove multitask&Out angle&Out controller with P

--- a/main-micro/main-micro.ioc
+++ b/main-micro/main-micro.ioc
@@ -90,7 +90,7 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM8_BRK_TIM12_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM8_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -359,8 +359,8 @@ TIM5.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,Channel-Input
 TIM5.Period=800
 TIM5.Prescaler=84-1
 TIM7.IPParameters=Prescaler,Period
-TIM7.Period=1
-TIM7.Prescaler=8400-1
+TIM7.Period=1000-1
+TIM7.Prescaler=84-1
 TIM8.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM8.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM8.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
