--- a/main-micro/main-micro.ioc
+++ b/main-micro/main-micro.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C2.I2C_Mode=I2C_Standard
+I2C2.I2C_Mode=I2C_Fast
 I2C2.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F405RGT6
