--- a/main-micro/main-micro.ioc
+++ b/main-micro/main-micro.ioc
@@ -2,6 +2,18 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=UART5_RX
+Dma.RequestsNb=1
+Dma.UART5_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART5_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART5_RX.0.Instance=DMA1_Stream0
+Dma.UART5_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART5_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART5_RX.0.Mode=DMA_CIRCULAR
+Dma.UART5_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART5_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART5_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.UART5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.I2C_Mode=I2C_Fast
@@ -9,19 +21,22 @@ I2C2.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
-Mcu.IP0=I2C2
-Mcu.IP1=NVIC
-Mcu.IP10=TIM12
-Mcu.IP11=UART4
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IP8=TIM5
-Mcu.IP9=TIM8
-Mcu.IPNb=12
+Mcu.IP0=DMA
+Mcu.IP1=I2C2
+Mcu.IP10=TIM7
+Mcu.IP11=TIM8
+Mcu.IP12=TIM12
+Mcu.IP13=UART4
+Mcu.IP14=UART5
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IP9=TIM5
+Mcu.IPNb=15
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -51,30 +66,34 @@ Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin30=PA15
 Mcu.Pin31=PC10
 Mcu.Pin32=PC11
-Mcu.Pin33=PB3
-Mcu.Pin34=PB4
-Mcu.Pin35=PB5
-Mcu.Pin36=VP_SYS_VS_Systick
-Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin33=PC12
+Mcu.Pin34=PD2
+Mcu.Pin35=PB3
+Mcu.Pin36=PB4
+Mcu.Pin37=PB5
+Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin39=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin42=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin42=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM12_VS_ClockSourceINT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PC4
-Mcu.PinsNb=44
+Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=6.8.0
 MxDb.Version=DB.6.0.80
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -88,9 +107,11 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM8_BRK_TIM12_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM8_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.UART5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=TSSP5
@@ -178,6 +199,8 @@ PC10.Signal=UART4_TX
 PC11.Locked=true
 PC11.Mode=Asynchronous
 PC11.Signal=UART4_RX
+PC12.Mode=Asynchronous
+PC12.Signal=UART5_TX
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
 PC13-ANTI_TAMP.GPIO_Label=Key
 PC13-ANTI_TAMP.Locked=true
@@ -214,6 +237,8 @@ PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=TSSP15
 PC9.Locked=true
 PC9.Signal=S_TIM8_CH4
+PD2.Mode=Asynchronous
+PD2.Signal=UART5_RX
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -231,7 +256,7 @@ ProjectManager.DeviceId=STM32F405RGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x400
+ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -243,11 +268,11 @@ ProjectManager.ProjectFileName=main-micro.ioc
 ProjectManager.ProjectName=main-micro
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x800
+ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_I2C2_Init-I2C2-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_TIM4_Init-TIM4-false-HAL-true,13-MX_TIM7_Init-TIM7-false-HAL-true,14-MX_UART5_Init-UART5-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -355,6 +380,9 @@ TIM5.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM5.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,Channel-Input_Capture2_from_TI2
 TIM5.Period=800
 TIM5.Prescaler=84-1
+TIM7.IPParameters=Prescaler,Period
+TIM7.Period=999
+TIM7.Prescaler=84-1
 TIM8.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM8.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM8.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
@@ -365,6 +393,9 @@ TIM8.Prescaler=168-1
 UART4.BaudRate=115200
 UART4.IPParameters=VirtualMode,BaudRate
 UART4.VirtualMode=Asynchronous
+UART5.BaudRate=9600
+UART5.IPParameters=VirtualMode,BaudRate
+UART5.VirtualMode=Asynchronous
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM12_VS_ClockSourceINT.Mode=Internal
@@ -379,6 +410,8 @@ VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
