--- a/main-micro/main-micro.ioc
+++ b/main-micro/main-micro.ioc
@@ -23,70 +23,75 @@ Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=I2C2
-Mcu.IP10=TIM7
-Mcu.IP11=TIM8
-Mcu.IP12=TIM12
-Mcu.IP13=UART4
-Mcu.IP14=UART5
+Mcu.IP10=TIM5
+Mcu.IP11=TIM7
+Mcu.IP12=TIM8
+Mcu.IP13=TIM12
+Mcu.IP14=UART4
+Mcu.IP15=UART5
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=TIM4
-Mcu.IP9=TIM5
-Mcu.IPNb=15
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=16
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB1
-Mcu.Pin13=PB2
-Mcu.Pin14=PB10
-Mcu.Pin15=PB11
-Mcu.Pin16=PB12
-Mcu.Pin17=PB13
-Mcu.Pin18=PB14
-Mcu.Pin19=PB15
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PB0
+Mcu.Pin16=PB1
+Mcu.Pin17=PB2
+Mcu.Pin18=PB10
+Mcu.Pin19=PB11
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PC6
-Mcu.Pin21=PC7
-Mcu.Pin22=PC8
-Mcu.Pin23=PC9
-Mcu.Pin24=PA8
-Mcu.Pin25=PA9
-Mcu.Pin26=PA10
-Mcu.Pin27=PA11
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
+Mcu.Pin20=PB12
+Mcu.Pin21=PB13
+Mcu.Pin22=PB14
+Mcu.Pin23=PB15
+Mcu.Pin24=PC6
+Mcu.Pin25=PC7
+Mcu.Pin26=PC8
+Mcu.Pin27=PC9
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PA15
-Mcu.Pin31=PC10
-Mcu.Pin32=PC11
-Mcu.Pin33=PC12
-Mcu.Pin34=PD2
-Mcu.Pin35=PB3
-Mcu.Pin36=PB4
-Mcu.Pin37=PB5
-Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin30=PA10
+Mcu.Pin31=PA11
+Mcu.Pin32=PA13
+Mcu.Pin33=PA14
+Mcu.Pin34=PA15
+Mcu.Pin35=PC10
+Mcu.Pin36=PC11
+Mcu.Pin37=PC12
+Mcu.Pin38=PD2
+Mcu.Pin39=PB3
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin42=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin44=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin45=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin46=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin40=PB4
+Mcu.Pin41=PB5
+Mcu.Pin42=VP_SYS_VS_Systick
+Mcu.Pin43=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin47=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin49=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin5=PA0-WKUP
+Mcu.Pin50=VP_TIM12_VS_ClockSourceINT
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
-Mcu.Pin9=PC4
-Mcu.PinsNb=47
+Mcu.Pin9=PA4
+Mcu.PinsNb=51
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -143,6 +148,16 @@ PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=TSSP11
 PA3.Locked=true
 PA3.Signal=S_TIM2_CH4
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=SPI1_BNO_SS
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=MOTOR2_PWM
 PA8.Signal=S_TIM1_CH1
@@ -256,7 +271,7 @@ ProjectManager.DeviceId=STM32F405RGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -268,7 +283,7 @@ ProjectManager.ProjectFileName=main-micro.ioc
 ProjectManager.ProjectName=main-micro
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
@@ -347,6 +362,12 @@ SH.S_TIM8_CH3.0=TIM8_CH3,Input_Capture3_from_TI3
 SH.S_TIM8_CH3.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,Input_Capture4_from_TI4
 SH.S_TIM8_CH4.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.CalculateBaudRate=656.25 KBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
