--- a/main-micro/main-micro.ioc
+++ b/main-micro/main-micro.ioc
@@ -27,8 +27,9 @@ Dma.UART5_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.UART5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C2.DutyCycle=I2C_DUTYCYCLE_16_9
 I2C2.I2C_Mode=I2C_Fast
-I2C2.IPParameters=I2C_Mode
+I2C2.IPParameters=I2C_Mode,DutyCycle
 KeepUserPlacement=false
 Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
