--- a/main-micro/main-micro.ioc
+++ b/main-micro/main-micro.ioc
@@ -54,56 +54,57 @@ Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
-Mcu.Pin15=PB0
-Mcu.Pin16=PB1
-Mcu.Pin17=PB2
-Mcu.Pin18=PB10
-Mcu.Pin19=PB11
+Mcu.Pin10=PA4
+Mcu.Pin11=PA5
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PB2
+Mcu.Pin19=PB10
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB12
-Mcu.Pin21=PB13
-Mcu.Pin22=PB14
-Mcu.Pin23=PB15
-Mcu.Pin24=PC6
-Mcu.Pin25=PC7
-Mcu.Pin26=PC8
-Mcu.Pin27=PC9
-Mcu.Pin28=PA8
-Mcu.Pin29=PA9
+Mcu.Pin20=PB11
+Mcu.Pin21=PB12
+Mcu.Pin22=PB13
+Mcu.Pin23=PB14
+Mcu.Pin24=PB15
+Mcu.Pin25=PC6
+Mcu.Pin26=PC7
+Mcu.Pin27=PC8
+Mcu.Pin28=PC9
+Mcu.Pin29=PA8
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PA10
-Mcu.Pin31=PA11
-Mcu.Pin32=PA13
-Mcu.Pin33=PA14
-Mcu.Pin34=PA15
-Mcu.Pin35=PC10
-Mcu.Pin36=PC11
-Mcu.Pin37=PC12
-Mcu.Pin38=PD2
-Mcu.Pin39=PB3
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PA11
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PA15
+Mcu.Pin36=PC10
+Mcu.Pin37=PC11
+Mcu.Pin38=PC12
+Mcu.Pin39=PD2
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=PB4
-Mcu.Pin41=PB5
-Mcu.Pin42=VP_SYS_VS_Systick
-Mcu.Pin43=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin44=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin46=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin47=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin50=VP_TIM12_VS_ClockSourceINT
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA4
-Mcu.PinsNb=51
+Mcu.Pin40=PB3
+Mcu.Pin41=PB4
+Mcu.Pin42=PB5
+Mcu.Pin43=VP_SYS_VS_Systick
+Mcu.Pin44=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin47=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin49=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin5=PC2
+Mcu.Pin50=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=52
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -242,6 +243,10 @@ PC15-OSC32_OUT.GPIOParameters=GPIO_Label
 PC15-OSC32_OUT.GPIO_Label=StartKey
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=GPIO_Input
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=ROBOT_ROLE
+PC2.Locked=true
+PC2.Signal=GPIO_Input
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=MOTORS_ENABLE
 PC4.Locked=true
@@ -302,39 +307,39 @@ ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_TIM4_Init-TIM4-false-HAL-true,13-MX_TIM7_Init-TIM7-false-HAL-true,14-MX_UART5_Init-UART5-false-HAL-true,15-MX_SPI1_Init-SPI1-false-HAL-true
-RCC.48MHZClocksFreq_Value=84000000
-RCC.AHBFreq_Value=168000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.48MHZClocksFreq_Value=42000000
+RCC.AHBFreq_Value=84000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=42000000
 RCC.APB1TimFreq_Value=84000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=84000000
-RCC.APB2TimFreq_Value=168000000
-RCC.CortexFreq_Value=168000000
+RCC.APB2Freq_Value=42000000
+RCC.APB2TimFreq_Value=84000000
+RCC.CortexFreq_Value=84000000
 RCC.EnbaleCSS=true
-RCC.EthernetFreq_Value=168000000
-RCC.FCLKCortexFreq_Value=168000000
+RCC.EthernetFreq_Value=84000000
+RCC.FCLKCortexFreq_Value=84000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=168000000
+RCC.HCLKFreq_Value=84000000
 RCC.HSE_VALUE=16000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=168000000
-RCC.PLLCLKFreq_Value=168000000
+RCC.MCO2PinFreq_Value=84000000
+RCC.PLLCLKFreq_Value=84000000
 RCC.PLLM=8
-RCC.PLLN=168
-RCC.PLLQCLKFreq_Value=84000000
+RCC.PLLN=84
+RCC.PLLQCLKFreq_Value=42000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=8000000
-RCC.SYSCLKFreq_VALUE=168000000
+RCC.SYSCLKFreq_VALUE=84000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
-RCC.VCOOutputFreq_Value=336000000
+RCC.VCOOutputFreq_Value=168000000
 RCC.VcooutputI2S=192000000
 SH.S_TIM12_CH1.0=TIM12_CH1,Input_Capture1_from_TI1
 SH.S_TIM12_CH1.ConfNb=1
@@ -377,7 +382,7 @@ SH.S_TIM8_CH3.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,Input_Capture4_from_TI4
 SH.S_TIM8_CH4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
-SPI1.CalculateBaudRate=656.25 KBits/s
+SPI1.CalculateBaudRate=328.125 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
@@ -428,7 +433,7 @@ TIM8.Prescaler=168-1
 UART4.BaudRate=115200
 UART4.IPParameters=VirtualMode,BaudRate
 UART4.VirtualMode=Asynchronous
-UART5.BaudRate=9600
+UART5.BaudRate=115200
 UART5.IPParameters=VirtualMode,BaudRate
 UART5.VirtualMode=Asynchronous
 VP_SYS_VS_Systick.Mode=SysTick
