Add SRFs for goal keeper & improve attacker strategy

--- a/main-micro/main-micro.ioc
+++ b/main-micro/main-micro.ioc
@@ -39,8 +39,9 @@ Mcu.IP10=TIM5
 Mcu.IP11=TIM7
 Mcu.IP12=TIM8
 Mcu.IP13=TIM12
-Mcu.IP14=UART4
-Mcu.IP15=UART5
+Mcu.IP14=TIM13
+Mcu.IP15=UART4
+Mcu.IP16=UART5
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
@@ -49,64 +50,69 @@ Mcu.IP6=TIM1
 Mcu.IP7=TIM2
 Mcu.IP8=TIM3
 Mcu.IP9=TIM4
-Mcu.IPNb=16
+Mcu.IPNb=17
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA3
-Mcu.Pin11=PA4
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
-Mcu.Pin17=PB0
-Mcu.Pin18=PB1
-Mcu.Pin19=PB2
+Mcu.Pin10=PA2
+Mcu.Pin11=PA3
+Mcu.Pin12=PA4
+Mcu.Pin13=PA5
+Mcu.Pin14=PA6
+Mcu.Pin15=PA7
+Mcu.Pin16=PC4
+Mcu.Pin17=PC5
+Mcu.Pin18=PB0
+Mcu.Pin19=PB1
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB10
-Mcu.Pin21=PB11
-Mcu.Pin22=PB12
-Mcu.Pin23=PB13
-Mcu.Pin24=PB14
-Mcu.Pin25=PB15
-Mcu.Pin26=PC6
-Mcu.Pin27=PC7
-Mcu.Pin28=PC8
-Mcu.Pin29=PC9
+Mcu.Pin20=PB2
+Mcu.Pin21=PB10
+Mcu.Pin22=PB11
+Mcu.Pin23=PB12
+Mcu.Pin24=PB13
+Mcu.Pin25=PB14
+Mcu.Pin26=PB15
+Mcu.Pin27=PC6
+Mcu.Pin28=PC7
+Mcu.Pin29=PC8
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PA8
-Mcu.Pin31=PA9
-Mcu.Pin32=PA10
-Mcu.Pin33=PA11
-Mcu.Pin34=PA13
-Mcu.Pin35=PA14
-Mcu.Pin36=PA15
-Mcu.Pin37=PC10
-Mcu.Pin38=PC11
-Mcu.Pin39=PC12
+Mcu.Pin30=PC9
+Mcu.Pin31=PA8
+Mcu.Pin32=PA9
+Mcu.Pin33=PA10
+Mcu.Pin34=PA11
+Mcu.Pin35=PA13
+Mcu.Pin36=PA14
+Mcu.Pin37=PA15
+Mcu.Pin38=PC10
+Mcu.Pin39=PC11
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=PD2
-Mcu.Pin41=PB3
-Mcu.Pin42=PB4
-Mcu.Pin43=PB5
-Mcu.Pin44=PB9
-Mcu.Pin45=VP_SYS_VS_Systick
-Mcu.Pin46=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin5=PC2
-Mcu.Pin50=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin51=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin52=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin53=VP_TIM12_VS_ClockSourceINT
-Mcu.Pin6=PC3
-Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA1
-Mcu.Pin9=PA2
-Mcu.PinsNb=54
+Mcu.Pin40=PC12
+Mcu.Pin41=PD2
+Mcu.Pin42=PB3
+Mcu.Pin43=PB4
+Mcu.Pin44=PB5
+Mcu.Pin45=PB6
+Mcu.Pin46=PB7
+Mcu.Pin47=PB8
+Mcu.Pin48=PB9
+Mcu.Pin49=VP_SYS_VS_Systick
+Mcu.Pin5=PC0
+Mcu.Pin50=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin53=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PA0-WKUP
+Mcu.Pin9=PA1
+Mcu.PinsNb=59
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -225,11 +231,27 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=TSSP9
 PB5.Locked=true
 PB5.Signal=S_TIM3_CH2
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=SRF_LEFT_ECHO
+PB6.Locked=true
+PB6.Signal=S_TIM4_CH1
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=SRF_BACK_ECHO
+PB7.Locked=true
+PB7.Signal=S_TIM4_CH2
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=SRF_RIGHT_ECHO
+PB8.Locked=true
+PB8.Signal=S_TIM4_CH3
 PB9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB9.GPIO_Label=BALL_SENSOR_2
 PB9.GPIO_PuPd=GPIO_PULLDOWN
 PB9.Locked=true
 PB9.Signal=GPIO_Input
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=SRFs_TRIGGER
+PC0.Locked=true
+PC0.Signal=GPIO_Output
 PC10.Locked=true
 PC10.Mode=Asynchronous
 PC10.Signal=UART4_TX
@@ -381,6 +403,12 @@ SH.S_TIM3_CH3.0=TIM3_CH3,Input_Capture3_from_TI3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,Input_Capture4_from_TI4
 SH.S_TIM3_CH4.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
+SH.S_TIM4_CH1.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,Input_Capture2_from_TI2
+SH.S_TIM4_CH2.ConfNb=1
+SH.S_TIM4_CH3.0=TIM4_CH3,Input_Capture3_from_TI3
+SH.S_TIM4_CH3.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,Input_Capture1_from_TI1
 SH.S_TIM5_CH1.ConfNb=1
 SH.S_TIM5_CH2.0=TIM5_CH2,Input_Capture2_from_TI2
@@ -410,6 +438,9 @@ TIM12.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM12.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,Channel-Input_Capture2_from_TI2
 TIM12.Period=800
 TIM12.Prescaler=84-1
+TIM13.IPParameters=Prescaler,Period
+TIM13.Period=800
+TIM13.Prescaler=84-1
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM2.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
@@ -424,8 +455,11 @@ TIM3.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-Input_Capture3_from_TI3,Prescaler,Period,Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Channel-Input_Capture4_from_TI4
 TIM3.Period=800
 TIM3.Prescaler=84-1
-TIM4.IPParameters=Prescaler,Period
-TIM4.Period=800
+TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM4.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
+TIM4.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM4.IPParameters=Prescaler,Period,Channel-Input_Capture3_from_TI3,Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2
+TIM4.Period=20000
 TIM4.Prescaler=84-1
 TIM5.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM5.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
@@ -452,6 +486,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM12_VS_ClockSourceINT.Mode=Internal
 VP_TIM12_VS_ClockSourceINT.Signal=TIM12_VS_ClockSourceINT
+VP_TIM13_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM13_VS_ClockSourceINT.Signal=TIM13_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
