--- a/main-micro/main-micro.ioc
+++ b/main-micro/main-micro.ioc
@@ -27,9 +27,8 @@ Dma.UART5_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.UART5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C2.DutyCycle=I2C_DUTYCYCLE_16_9
-I2C2.I2C_Mode=I2C_Fast
-I2C2.IPParameters=I2C_Mode,DutyCycle
+I2C2.I2C_Mode=I2C_Standard
+I2C2.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
@@ -340,7 +339,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_TIM4_Init-TIM4-false-HAL-true,13-MX_TIM7_Init-TIM7-false-HAL-true,14-MX_UART5_Init-UART5-false-HAL-true,15-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_TIM4_Init-TIM4-false-HAL-true,13-MX_TIM7_Init-TIM7-false-HAL-true,14-MX_UART5_Init-UART5-false-HAL-true,15-MX_SPI1_Init-SPI1-false-HAL-true,16-MX_TIM13_Init-TIM13-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
